--- a/index.html
+++ b/index.html
@@ -35,6 +35,6 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="bundle.js"></script>
+    <script src="public/bundle.js"></script>
   </body>
 </html>
